assets/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
:root{
    --primary-blue: #4F98CA;
    --green: #50D890;
    --white: #EFFFFB
}  


body {
    height: 200vh;
    background-color: var(--white);
    font-family: 'Inter', sans-serif;
}
/* ----- Nav Bar Start ----- */
.navbar {
    display: flex;
    align-items: center;
    background-color: var(--white);
    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.25);
    text-transform: uppercase;
    padding: 0px;
}
    /* Nav Bar Logo */
.navbar-brand {
    padding: 4px;
}

.navbar-brand img{
    height: 52px;
}
    /* ---------- */

ul.navbar-nav {
    margin-right: 16px;
}

li.nav-item  {
    display: flex;
    align-items: center;
    padding: 0px 20px;
    margin:4px 8px;
    border-radius: 12px;
}

li.active {
    border: 2px solid var(--green);
}
/* Note: !important color here */
li.nav-item a.nav-link {
    color: var(--primary-blue) !important;
    font-weight: 600;
}
/* Note: !important color here */
li.active a.nav-link {
    color: var(--green) !important;
}

li:hover {
    background-color: var(--green);
}
/* Note: !important color here */
li:hover a.nav-link {
    color: var(--white) !important;
}
/* Note: !important color here */
div.navbar-collapse .btn {
    height: 40px;
    padding: 0px 16px;
    color: var(--white)!important;
    background-color: var(--primary-blue);
    border: none;
    border-radius: 12px;
    text-transform: uppercase;
    font-weight: 600;
}
    /* Nav Bar Toggle */
.navbar-toggler {
    background-color: var(--primary-blue);
    border: none;
    outline: none;
}

.navbar-toggler:hover {
    background-color: var(--green);
}

.navbar-toggler:focus {
    border: none;
    box-shadow: none;
}
    /* ---------- */
/* ----- Nav Bar End ----- */

/*-----Footer----*/
#footer {
    background-color: var(--primary-blue) !important;
    color: var(--white)!important;
    margin-top: 100px;
    padding: 30px 0;
}

.diachi{
    display: flex;
    flex-direction: row;
}
.copyright{
    padding: 15px 0 0 0;
}

